axum-macros/tests/from_request/fail/parts_extracting_body.stderr
error[E0277]: the trait bound `String: FromRequestParts<S>` is not satisfied
 --> tests/from_request/fail/parts_extracting_body.rs:5:11
  |
5 |     body: String,
  |           ^^^^^^ the trait `FromRequestParts<S>` is not implemented for `String`
  |
  = note: Function argument is not a valid axum extractor.
          See `https://docs.rs/axum/latest/axum/extract/index.html` for details
  = help: the following other types implement trait `FromRequestParts<S>`:
            <() as FromRequestParts<S>>
            <(T1, T2) as FromRequestParts<S>>
            <(T1, T2, T3) as FromRequestParts<S>>
            <(T1, T2, T3, T4) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequestParts<S>>
          and 27 others
